--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4G
 
 mod_version = 1.0.0+1.20.4
 maven_group = org.teamvoided
-modid = template
-archives_base_name = Template
+modid = reef
+archives_base_name = Reef
 
 kotlin.code.style=official
