--- a/gradle/iridium/iridium.toml
+++ b/gradle/iridium/iridium.toml
@@ -1,6 +1,6 @@
-projectTitle = "TemplateMod"
-modId = "template"
-githubRepo = "Teamvoided/TeamVoidedTemplateMod"
+projectTitle = "Reef"
+modId = "reef"
+githubRepo = "Teamvoided/Reef"
 discordServerInviteId = "KZ5Q364hEg"
 authors = [ "brokenfuse", "theendercore" ]
 majorMinecraftVersion = "1.20"
